# design-patterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: maintenance_update.md
.github/workflows/: cicd.yml
include/behavioral/strategy/: README.md  strategy.hpp
include/creational/singleton/: README.md  singleton.hpp
include/structural/adapter/: adapter.hpp
src/behavioral/strategy/: CMakeLists.txt  README.md  main.cpp  strategy.cpp
src/creational/singleton/: CMakeLists.txt  README.md  main.cpp  singleton.cpp
src/structural/adapter/: CMakeLists.txt  adapter.cpp  main.cpp
